docker-compose now builds an image with name cicd-app, jenkins now installs docker-compose and uses docker-compose command, hopefully with the right compose stack

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - DOCKER_HOST=unix:///var/run/docker.sock
     restart: unless-stopped
 
-  web-app:
+  cicd-app:
     build: .
     container_name: cicd-app
     ports:
