--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -1,3 +1,5 @@
 FROM jenkins/jenkins:lts
 USER root
 RUN apt-get update && apt-get install -y docker.io
+RUN curl -L "https://github.com/docker/compose/releases/download/v2.23.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && \
+    chmod +x /usr/local/bin/docker-compose
