--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -1,5 +1,11 @@
 FROM jenkins/jenkins:lts
 USER root
-RUN apt-get update && apt-get install -y docker.io
-RUN curl -L "https://github.com/docker/compose/releases/download/v2.23.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && \
+RUN curl -fsSL https://download.docker.com/linux/static/stable/x86_64/docker-26.1.3.tgz -o docker.tgz \
+    && tar xzvf docker.tgz \
+    && mv docker/docker /usr/local/bin/ \
+    && rm -rf docker docker.tgz
+
+# 2. Install Docker Compose (Latest Version)
+# We bump this to v2.27.0 to ensure it speaks the new API language
+RUN curl -L "https://github.com/docker/compose/releases/download/v2.27.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && \
     chmod +x /usr/local/bin/docker-compose
