--- a/Dockerfile.jenkins
+++ b/Dockerfile.jenkins
@@ -1,11 +1,29 @@
 FROM jenkins/jenkins:lts
 USER root
-RUN curl -fsSL https://download.docker.com/linux/static/stable/x86_64/docker-26.1.3.tgz -o docker.tgz \
-    && tar xzvf docker.tgz \
-    && mv docker/docker /usr/local/bin/ \
-    && rm -rf docker docker.tgz
 
-# 2. Install Docker Compose (Latest Version)
-# We bump this to v2.27.0 to ensure it speaks the new API language
-RUN curl -L "https://github.com/docker/compose/releases/download/v2.27.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && \
-    chmod +x /usr/local/bin/docker-compose
+# 1. Install prerequisites to allow apt to use a repository over HTTPS
+RUN apt-get update && apt-get install -y \
+    ca-certificates \
+    curl \
+    gnupg \
+    lsb-release
+
+# 2. Add Docker's Official GPG Key (The security signature)
+RUN mkdir -p /etc/apt/keyrings && \
+    curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+
+# 3. Set up the Official Docker Repository
+RUN echo \
+  "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian \
+  $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
+
+# 4. Install the Latest Docker CLI + Buildx + Compose Plugin
+#    - docker-ce-cli: The latest Docker Client
+#    - docker-compose-plugin: The modern 'docker compose' (v2)
+RUN apt-get update && apt-get install -y docker-ce-cli docker-compose-plugin
+
+# 5. Compatibility Hack (Critical for your Jenkinsfile)
+#    Your script uses 'docker-compose' (with a hyphen).
+#    The modern plugin uses 'docker compose' (space).
+#    This line creates a fake command so your old scripts still work.
+RUN ln -s /usr/libexec/docker/cli-plugins/docker-compose /usr/local/bin/docker-compose
